--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ packaging==24.1
 pillow==11.0.0
 pycparser==2.22
 PyJWT==2.9.0
+python-decouple==3.8
 python3-openid==3.2.0
 pytz==2024.2
 PyYAML==6.0.2
